<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/overflowMenu"
    android:icon="@drawable/ic_baseline_sort_24"
    android:title="@string/sort_by"
    app:showAsAction="always|withText">
    <menu>
        <item
            android:id="@+id/type_sort"
            android:title="@string/type"
            />
        <item
            android:id="@+id/name_sort"
            android:title="@string/name"
            />
        <item
            android:id="@+id/date_sort"
            android:title="@string/date"
            />
        <item
            android:id="@+id/priority_sort"
            android:title="@string/priority"
            />
    </menu>
</item>

</menu>