<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/task_tile"
    android:padding="24sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewTime"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:autoSizeTextType="uniform"
                android:foregroundGravity="left"
                android:gravity="start"
                android:includeFontPadding="true"
                android:text="@string/time"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:foregroundGravity="right"
                android:gravity="end"
                android:includeFontPadding="true"
                android:text="@string/date"
                android:textSize="16sp" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconRowImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/type_icon"
                    android:cropToPadding="true"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/taskName"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:autoSizeTextType="uniform"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:text="@string/taskname"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:includeFontPadding="true"
                android:paddingTop="10dp"
                android:text="@string/description" />
        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>